# weatherDesktop

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
docs/: RADAR_PROJECT.md
include/weatherdesktop/: AlertEngine.h  App.h  Config.h  GeoLocator.h  LocationManager.h  NotificationManager.h  RadarView.h  SkyEvents.h  SystemTray.h  Texture.h  Theme.h  ThreadSafeQueue.h  UIRenderer.h  WeatherService.h  WeatherTypes.h
resources/: moon-phases.xcf  ne_10m_counties.json  ne_10m_roads.json  ne_50m_admin0_lines.json  ne_50m_admin1_lines.json  sprite_atlas.txt
src/: AlertEngine.cpp  App.cpp  Config.cpp  GeoLocator.cpp  LocationManager.cpp  NotificationManager.cpp  RadarView.cpp  SkyEvents.cpp  SystemTray.cpp  Texture.cpp  Theme.cpp  UIRenderer.cpp  WeatherService.cpp  WeatherTypes.cpp  main.cpp
test/: test_alertengine.cpp  test_framework.h  test_main.cpp  test_parsing.cpp  test_queue.cpp  test_skyevents.cpp  test_weathertypes.cpp
